# texto2area

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: exemplo.py
reproduzir/: REPRODUCAO.md  _construir_artefatos.py  modelo_lib.py  treinar_e_salvar.py
tests/: test_smoke.py
texto2area/: __init__.py  _classify.py  _preprocess.py  _vectorizer_analyzer.py
texto2area/data/: classes.json
