[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "texto2area"
version = "0.1.0"
description = "Classifica titulo+resumo de teses/dissertacoes brasileiras na grande area de avaliacao CAPES, a partir do texto (portugues)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Renê R. Veloso" }]
dependencies = [
  "scikit-learn==1.8.0",
  "joblib>=1.5",
  "numpy>=1.26,<2.3",
  "scipy>=1.11",
  "spacy>=3.8,<3.9",
]

# Modelo do spaCy (NAO instala via pip): apos instalar o pacote, rode
#   python -m spacy download pt_core_news_lg

[tool.setuptools]
packages = ["texto2area"]

[tool.setuptools.package-data]
texto2area = ["data/*.joblib", "data/*.json"]
